--- a/src/components/wrappers/image.module.css
+++ b/src/components/wrappers/image.module.css
@@ -9,9 +9,9 @@
 }
 
 .imageItem {
-  height: auto;
+  height: 100%;
   width: 100%;
-  object-fit: cover;
+  object-fit: contain;
   position: relative;
   cursor: zoom-in;
   overflow: hidden;
